# bakar

./: .arch-rules.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASING.md  mado.toml  pyproject.toml  tach.toml
.github/workflows/: ci.yml  publish.yml
docs/: bitbake-override.md  bitbake.md  build.md  changelog.md  clean-cache.md  clean-sstate.md  clean.md  completion.md  config-reference.md  configuration.md  diff.md  diffsigs.md  doctor.md  drift.md  dump.md  for-all.md  gen-kas.md  getvar.md  graph.md  hashserv.md  index.md  init.md  insights.md  inspect.md  layers.md  lock.md  log.md  mirror.md  monitor.md  prefetch.md  presets.md  report.md  run.md  sccache-dist.md  settings.md  setup.md  shell.md  show.md  stop.md  stress-parse.md  (+3 more)
examples/: config.toml  kas-am62x-var-som.yml  kas-imx95-var-dart.yml  kas-qemuarm64-scarthgap.yml  kas-qemuarm64-wrynose.yml  kas-qemux86-64-wrynose-fail.yml  kas-qemux86-64-wrynose.yml
examples/bbsetup-oe-nodistro-wrynose/: .gitignore
overlays/: bspctl-tuning-generic.yml
scripts/: blog-ablation-table.py  clean-all-cache.sh  demo_build_ui.py  demo_build_ui.tape  gen-fish-completion.py  release.sh  run-ablation-matrix.sh
src/bakar/: __init__.py  __main__.py  bsp_detect.py  bsp_model.py  build_scope.py  build_stop.py  cache_render.py  central_service.py  cli.py  config.py  daemon_log.py  diagnostics.py  eventlog.py  fmt.py  fork_race_signatures.py  fsremove.py  gitutil.py  graph_analyze.py  hashserv.py  insights_disk.py  insights_pressure.py  insights_sstate.py  insights_timing.py  inspect_parse.py  kas.py  layers.py  manifest_diff.py  mold_linkstats.py  mold_verify.py  observability.py  output_mode.py  pin_state.py  preset_config.py  prserv.py  psi.py  report.py  sccache_server.py  sched_triage.py  task_rollup.py  task_timings.py  (+6 more)
src/bakar/commands/: __init__.py  _app.py  _helpers.py  bitbake.py  build.py  changelog.py  clean.py  clean_cache.py  clean_sstate.py  cluster_info.py  diff.py  diffsigs.py  doctor.py  drift.py  dump.py  for_all.py  gen_kas.py  getvar.py  graph.py  hashserv.py  init.py  insights.py  inspect.py  layers.py  lock.py  log.py  mirror.py  monitor.py  override.py  prefetch.py  presets.py  prserv.py  report.py  sched_triage.py  settings.py  setup.py  shell.py  show.py  stop.py  stress_parse.py  (+2 more)
src/bakar/overlays/: bakar-tuning-cache-classify.yml  bakar-tuning-ccache.yml  bakar-tuning-generic.yml  bakar-tuning-hashequiv.yml  bakar-tuning-host.yml  bakar-tuning-mold.yml  bakar-tuning-nxp.yml  bakar-tuning-sccache.yml  bakar-tuning-shared-cache.yml  bakar-tuning-ti.yml
src/bakar/overlays/meta-bakar-cache-classify/classes/: cache_classify.bbclass
src/bakar/overlays/meta-bakar-cache-classify/conf/: layer.conf
src/bakar/overlays/meta-bakar-host/conf/: layer.conf
src/bakar/overlays/meta-bakar-mold/classes/: mold.bbclass
src/bakar/overlays/meta-bakar-mold/conf/: layer.conf
src/bakar/overlays/meta-bakar-mold/files/: ld-timing-wrapper.sh
src/bakar/setup/: __init__.py  plan.py  profile.py  runner.py  script.py
src/bakar/setup/actions/: __init__.py  base.py  cache.py  central_tier.py  config_write.py  docker.py  git.py  sysctl.py  tools.py
src/bakar/steps/: bitbake_override.py  build_ui.py  kas_build.py  qcom_build.py  qcom_common.py  qcom_setup_env.py  remote_dispatch.py  repo.py  run_qemu.py  setup_env.py  stress_parse.py  ti_layertool.py  ti_setup_env.py
src/bspctl/: __init__.py  bsp_detect.py  cli.py  config.py  diagnostics.py  fork_race_signatures.py  hashserv.py  kas.py  layers.py  observability.py  triage.py  user_config.py  workspace.py
src/bspctl/commands/: _app.py  _helpers.py  build.py  clean.py  doctor.py  dump.py  for_all.py  hashserv.py  layers.py  settings.py  triage.py
src/bspctl/overlays/: bspctl-tuning-generic.yml  bspctl-tuning-nxp.yml  bspctl-tuning-ti.yml
src/bspctl/steps/: bitbake_override.py  kas_build.py  run_qemu.py  stress_parse.py
tests/: _fakes.py  conftest.py  test_bbsetup.py  test_bbsetup_config.py  test_bitbake_bin_path.py  test_bitbake_override.py  test_bsp_detect.py  test_bsp_detect_prop.py  test_bsp_model.py  test_bsp_model_prop.py  test_build_bbsetup_show_layers.py  test_build_byo_show_layers.py  test_build_command_mode.py  test_build_flags.py  test_build_manifest_show_layers.py  test_build_parallelism_config.py  test_build_parallelism_derivation.py  test_build_scope.py  test_build_stop.py  test_build_stop_container.py  test_build_ui.py  test_build_ui_events.py  test_build_ui_plain.py  test_buildtools_provision.py  test_cache_render.py  test_cache_render_plain.py  test_cache_summary.py  test_central_service.py  test_ci_output_mode.py  test_clean_cache.py  test_clean_cache_full.py  test_cli_bitbake.py  test_cli_build.py  test_cli_build_extended.py  test_cli_build_host.py  test_cli_build_remote.py  test_cli_build_yaml.py  test_cli_changelog.py  test_cli_clean.py  test_cli_clean_byo.py  (+145 more)
tests/fixtures/: README.md  bitbake_env_sample.txt  bitbake_eventlog.json  layer_conf_sample.conf  task-depends.dot
tests/integration/: test_hashserv_real_daemon.py  test_preset_integration.py
(+5 files in other folders)
