[project]
name = "bakar"
version = "0.16.0"
description = "kas-based Yocto BSP build orchestrator - live build UI, pre-flight checks, telemetry, and failure triage"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
authors = [{ name = "Javier Tia" }]
keywords = [
  "bitbake",
  "bsp",
  "embedded",
  "imx",
  "kas",
  "nxp",
  "ti-sitara",
  "yocto"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Operating System Kernels :: Linux",
]
dependencies = [
  "networkx>=3.0",
  "pydot>=2.0",
  "pyyaml>=6.0",
  "questionary>=2.0",
  "rich>=13.0.0",
  "tomli-w>=1.0",
  "typer>=0.12.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/jetm/bakar/issues"
Homepage = "https://github.com/jetm/bakar"
Repository = "https://github.com/jetm/bakar"

[project.scripts]
bakar = "bakar.cli:main"

[dependency-groups]
dev = [
  "hypothesis>=6.0",
  "pre-commit",
  "pytest>=9",
  "pytest-cov>=6",
  "pytest-randomly",
  "pytest-timeout",
  "ruff",
  "ty",
]

[build-system]
requires = ["uv_build>=0.6,<0.13"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true
source = ["bakar"]
omit = [
  "tests/*",
]

[tool.coverage.report]
precision = 2
# Measured TOTAL after un-omitting steps/ and pragma'ing the irreducible
# subprocess/PTY/thread core is 80.72% (test-steps-executors task 2.1).
# Design assumption A2 predicted >=90%; falsified - run_build orchestration
# (du_loop, _heartbeat, cmd-build/Progress cleanup) plus run_shell /
# run_shell_capture / run_kas_subcommand bodies cap the testable remainder.
# Floor stays at 80 (largest multiple of 5 at or below 80.72, not lowered).
fail_under = 80
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.",
  "@overload",
]

[tool.pytest.ini_options]
addopts = ["-v", "--tb=short", "--cov=bakar", "--cov-report=term-missing"]
markers = [
  "unit: fast hermetic tests with no external tools or services",
  "integration: tests requiring external tools or services",
]
pythonpath = ["src"]
testpaths = ["tests"]
timeout = 30

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "E",  # pycodestyle errors
  "F",  # Pyflakes
  "I",  # isort
  "LOG",  # flake8-logging
  "N",  # pep8-naming
  "PERF",  # Perflint
  "PIE",  # flake8-pie
  "PLW",  # Pylint warnings
  "RSE",  # flake8-raise
  "RUF",  # Ruff-specific rules
  "SIM",  # flake8-simplify
  "TC",  # flake8-type-checking
  "UP",  # pyupgrade
  "W",  # pycodestyle warnings
]
extend-select = [
  "PLR0913",  # too-many-arguments
  "FBT001",  # boolean-typed-positional-argument
  "FBT002",  # boolean-default-positional-argument
  "FBT003",  # boolean-positional-value-in-call
  "N818",  # exception-name (Error suffix)
  "TRY300",  # try-consider-else
  "TRY004",  # type-check-without-type-error
]
ignore = [
  "SIM102",  # Use single if statement - often reduces readability
  "SIM105",  # Use contextlib.suppress - adds import for minimal benefit
  "SIM108",  # Use ternary operator - can reduce readability for complex conditions
  "SIM110",  # Use any() instead of for loop - sometimes less clear
  "TRY003",  # Avoid specifying long messages outside exception class - too opinionated for a CLI tool
]

[tool.ruff.lint.pylint]
max-args = 5

[tool.ruff.lint.isort]
known-first-party = ["bakar"]

[tool.ruff.lint.per-file-ignores]
"src/bakar/cli.py" = ["B008"]
# Typer evaluates annotations at runtime via inspect.signature(eval_str=True);
# Path and other stdlib types used in command signatures must not be TYPE_CHECKING-guarded.
# Typer CLI commands use boolean Options/Flags (FBT*) and many args (PLR0913) by design.
"src/bakar/commands/*.py" = ["TC003", "FBT001", "FBT002", "FBT003", "PLR0913"]
# Internal helpers with many params that are not Typer commands but exceed max-args by design.
"src/bakar/config.py" = ["PLR0913"]
"src/bakar/steps/stress_parse.py" = ["PLR0913"]
"src/bakar/steps/kas_build.py" = ["PLR0913"]
# permanent: module-level lazy-load singletons (_VENDORS, _USER_CONFIG).
"src/bakar/commands/_app.py" = ["PLW0603"]
# Test functions receive bool params from @pytest.mark.parametrize, not from callers.
"tests/**/*.py" = ["FBT001", "FBT002", "FBT003"]
# Test helper _make_tuning_cfg mirrors BuildConfig field overrides - many params by design.
"tests/test_kas_env.py" = ["PLR0913"]

[tool.ty.rules]
# Noisy without full type annotations - project uses gradual typing
call-non-callable = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
invalid-type-form = "ignore"
no-matching-overload = "ignore"
not-subscriptable = "ignore"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "bakar"
module-root = "src"
